--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,11 +1,20 @@
 <html>
-	<header>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="view-port" content="width=device-width, innitial-scale=1.0">
 		<title>
+			AirBNB Webstatic
 		</title>
-	</header>
+		<link rel="stylesheet" href="styles/3-header.css">
+		<link rel="stylesheet" href="styles/3-common.css">
+		<link rel="stylesheet" href="styles/3-footer.css">    
+	</head>
 	<body>
+		<header>
+		</header>
+		<div></div>
 		<footer>
-
+			<p>Best School</p>
 		</footer>
 	</body>
 </html>
