--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="AirBnB clone">
   <title>Airbnb</title>
-  <link href="~/AirBnB_clone/web_static/images/icon.png">
-  <link href="./styles/2-common.css" alt="stylesheet">
-  <link href="./styles/2-footer.css" alt="stylesheet">
-  <link href="./styles/2-header.css" alt="stylesheet">
+  <link href="AirBnB_clone/web_static/images/icon.png">
+  <link href="styles/3-common.css" alt="stylesheet">
+  <link href="styles/3-footer.css" alt="stylesheet">
+  <link href="styles/3-header.css" alt="stylesheet">
 </head>
 
 <body>
