--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/6-filters.css">
+    <link rel="stylesheet" href="styles/7-places.css">
     <link rel="icon" href="images/icon1.png">
   </head>
   <body>
@@ -42,7 +43,18 @@
 	<button>Search</button>
       </section>
     </div>
-    
+    <section class="places">
+        <h1>Places</h1>
+        <article>
+      <h2>My home</h2>
+      </article>
+        <article>
+      <h2>Tiny house</h2>
+      </article>
+        <article>
+      <h2>A suite</h2>
+      </article>
+      </section>
     <footer>
       <p>Best School</p>
     </footer>
