--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/6-filters.css">
     <link rel="stylesheet" href="styles/8-places.css">
-    <link rel="icon" href="images/icon1.png">
+    <link rel="icon" href="images/icon.png">
   </head>
   <body>
     <header>
@@ -43,18 +43,89 @@
 	<button>Search</button>
       </section>
     </div>
-    <section class="places">
-        <h1>Places</h1>
-        <article>
-      <h2>My home</h2>
-      </article>
-        <article>
-      <h2>Tiny house</h2>
-      </article>
-        <article>
-      <h2>A suite</h2>
-      </article>
-      </section>
+<section class="places">
+  <article>
+  <div class="price_by_night">400 ETB
+    </div>
+    <div class="information">
+      Small House
+
+      <div class="max_guest">
+        2 Guests
+      </div>
+      <div class="number_rooms">
+        2 Rooms
+
+      </div>
+      <div class="number_bathrooms">
+        2 Bath rooms
+      </div>
+
+    </div>
+    <div class="user">
+      <b>Owner</b> Mr. Alemu
+    </div>
+    <div class="description">
+      This house is very comfort, fair price and that makes feeling as family
+    </div>
+  </article>   
+  <!--The second article----------------------------------->
+  <article>
+    <div class="price_by_night">600 ETB
+      </div>
+      <div class="information">
+        Comfort House
+  
+        <div class="max_guest">
+          3 Guests
+        </div>
+        <div class="number_rooms">
+          3 Rooms
+  
+        </div>
+        <div class="number_bathrooms">
+          2 Bath rooms
+        </div>
+  
+      </div>
+      <div class="user">
+        <b>Owner</b> Astewul Alemu
+      </div>
+      <div class="description">
+        Confort with 2 bath rooms,
+        including 3 rooms,
+        can only use 3 guests,
+
+      </div>
+    </article>  
+    <article>
+  <div class="price_by_night">1000 ETB
+    </div>
+    <div class="information">
+      Luxury House
+
+      <div class="max_guest">
+        7 Guests
+      </div>
+      <div class="number_rooms">
+        6 Rooms
+
+      </div>
+      <div class="number_bathrooms">
+        5 Bath rooms
+      </div>
+
+    </div>
+    <div class="user">
+      <b>Owner</b> Astewul Alemu
+    </div>
+    <div class="description">
+      This is fake text.  a condition of abundance or great ease and comfort : sumptuous environment. lived in luxury. : something adding to pleasure or comfort 
+      but not absolutely necessary. one of life's luxuries.
+    </div>
+  </article>  
+</section> 
+
     <footer>
       <p>Best School</p>
     </footer>
