--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -34,9 +34,11 @@
       <ul class="popover">
         <li>
             <h2>Amenities</h2>
-            <h3>Home</h3>
-            <h3>Cafe</h3>
-            <h3>Garden</h3>
+            <h3>Wifi</h3>
+            <h3>Air conditioning</h3>
+            <h3>Printer</h3>
+            <h3>Coffee machine</h3>
+
         </li>
       </ul>
 	</div>
